# CDRipShare

./: .gitignore  Cargo.toml  LICENSE  README.MD  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  ci.yml  release.yml
.run/: CDRipShare.run.xml
archive/compose/: README.MD  build.gradle.kts
archive/compose/.run/: CDRipShare Build.run.xml
archive/compose/docs/: inital-hint.txt
archive/compose/docs/superpowers/plans/: 2026-06-27-cover-image-generator.md  2026-06-28-cover-bg-color-selector.md  2026-07-04-cover-editor-window.md
archive/compose/docs/superpowers/specs/: 2026-06-27-image-audio-to-video-design.md  2026-07-03-cover-editor-window-design.md
archive/compose/gradle/: libs.versions.toml
archive/compose/src/main/kotlin/io/github/benderblog/cdripshare/ui/: App.kt  (+4 more)
docs/superpowers/plans/: 2026-06-27-image-audio-to-video.md  2026-07-04-cover-editor-window.md
gradle/: libs.versions.toml
src/: app.rs  chapters.rs  cover.rs  cue.rs  ffmpeg.rs  main.rs  model.rs
src/main/kotlin/io/github/benderblog/cdripshare/: Main.kt
src/main/kotlin/io/github/benderblog/cdripshare/ffmpeg/: AudioConcat.kt  VideoMuxer.kt
src/main/kotlin/io/github/benderblog/cdripshare/model/: BackgroundMode.kt  VideoCodec.kt
src/main/kotlin/io/github/benderblog/cdripshare/ui/: App.kt  CoverEditorWindow.kt  ImagePickerPanel.kt  LogPanel.kt
src/main/kotlin/io/github/benderblog/cdripshare/util/: ColorCutQuantizer.kt  CoverImageGenerator.kt  Palette.kt
src/main/kotlin/io/github/benderblog/cdripshare/viewmodel/: MainViewModel.kt
(+22 files in other folders)
